seedboxk8s/applications/heimdall/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - image: ghcr.io/linuxserver/heimdall
          name: heimdall
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: heimdall-config-pvc
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: heimdall-config-pvc
          persistentVolumeClaim:
            claimName: heimdall-config-pvc
