seedboxk8s/applications/heimdall/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: tortuga
spec:
  replicas: 1
  serviceName: heimdall
  selector:
    matchLabels:
      app.kubernetes.io/name: heimdall
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heimdall
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: ghcr.io/linuxserver/heimdall:v2.7.6-ls350
          name: heimdall
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: heimdall-config-pvc
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: heimdall-config-pvc
          persistentVolumeClaim:
            claimName: heimdall-config-pvc
