seedboxk8s/applications/heimdall/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: heimdall
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
