seedboxk8s/applications/heimdall/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.${productionClusterFqdn}`) || Host(`seedbox.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: heimdall
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
